@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package com.adminportal {
      package com.adminportal.controller {
        class BookController {
            + addBook()
            + addBookPost()
            + bookInfo()
            + updateBook()
            + updateBookPost()
            + bookList()
            + remove()
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.controller {
        class HomeController {
            + index()
            + home()
            + login()
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.controller {
        class ResourceController {
            + removeList()
        }
      }
    }
  }
  

  BookController o-- BookService : bookService
  ResourceController o-- BookService : bookService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
